<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp">
	
	<TextView android:id="@+id/txt_name"
			android:layout_alignParentStart="true"
			android:layout_marginTop="8dp"
			android:layout_marginRight="8dp"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/cs_field_name" />
	<EditText android:id="@+id/edt_name"
			android:inputType="textCapWords"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_toRightOf="@id/txt_name"
			android:layout_alignBaseline="@id/txt_name" />
	
	<TextView android:id="@+id/txt_startingClass"
			android:layout_below="@id/edt_name"
			android:layout_marginTop="10dp"
			android:layout_marginRight="8dp"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/cs_field_class" />
	<Spinner android:id="@+id/edt_startingClass"
			android:entries="@array/class_name_list"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_toRightOf="@id/txt_startingClass"
			android:layout_alignBaseline="@id/txt_startingClass"
			android:prompt="@string/app_prompt_starting_class" />
	
	<TextView android:id="@+id/txt_soulLevel"
			android:layout_below="@id/edt_startingClass"
			android:layout_marginTop="10dp"
			android:layout_marginRight="8dp"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/cs_field_level" />
	<EditText android:id="@+id/edt_soulLevel"
			android:inputType="textCapWords"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_toRightOf="@id/txt_soulLevel"
			android:layout_alignBaseline="@id/txt_soulLevel" />
	
	<TextView android:id="@+id/txt_vitality"
			android:layout_below="@id/edt_soulLevel"
			android:layout_marginTop="10dp"
			android:layout_marginRight="8dp"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/cs_field_vit" />
	<EditText android:id="@+id/edt_vitality"
			android:inputType="textCapWords"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_toRightOf="@id/txt_vitality"
			android:layout_alignBaseline="@id/txt_vitality" />
	
	<TextView android:id="@+id/txt_attunement"
			android:layout_below="@id/edt_vitality"
			android:layout_marginTop="10dp"
			android:layout_marginRight="8dp"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/cs_field_att" />
	<EditText android:id="@+id/edt_attunement"
			android:inputType="textCapWords"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_toRightOf="@id/txt_attunement"
			android:layout_alignBaseline="@id/txt_attunement" />
	
	<TextView android:id="@+id/txt_endurance"
			android:layout_below="@id/edt_attunement"
			android:layout_marginTop="10dp"
			android:layout_marginRight="8dp"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/cs_field_end" />
	<EditText android:id="@+id/edt_endurance"
			android:inputType="textCapWords"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_toRightOf="@id/txt_endurance"
			android:layout_alignBaseline="@id/txt_endurance" />
	
	<TextView android:id="@+id/txt_strength"
			android:layout_below="@id/edt_endurance"
			android:layout_marginTop="10dp"
			android:layout_marginRight="8dp"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/cs_field_str" />
	<EditText android:id="@+id/edt_strength"
			android:inputType="textCapWords"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_toRightOf="@id/txt_strength"
			android:layout_alignBaseline="@id/txt_strength" />
	
	<TextView android:id="@+id/txt_dexterity"
			android:layout_below="@id/edt_strength"
			android:layout_marginTop="10dp"
			android:layout_marginRight="8dp"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/cs_field_dex" />
	<EditText android:id="@+id/edt_dexterity"
			android:inputType="textCapWords"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_toRightOf="@id/txt_dexterity"
			android:layout_alignBaseline="@id/txt_dexterity" />
	
	<TextView android:id="@+id/txt_resistance"
			android:layout_below="@id/edt_dexterity"
			android:layout_marginTop="10dp"
			android:layout_marginRight="8dp"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/cs_field_res" />
	<EditText android:id="@+id/edt_resistance"
			android:inputType="textCapWords"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_toRightOf="@id/txt_resistance"
			android:layout_alignBaseline="@id/txt_resistance" />
	
	<TextView android:id="@+id/txt_intelligence"
			android:layout_below="@id/edt_resistance"
			android:layout_marginTop="10dp"
			android:layout_marginRight="8dp"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/cs_field_int" />
	<EditText android:id="@+id/edt_intelligence"
			android:inputType="textCapWords"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_toRightOf="@id/txt_intelligence"
			android:layout_alignBaseline="@id/txt_intelligence" />
	
	<TextView android:id="@+id/txt_faith"
			android:layout_below="@id/edt_intelligence"
			android:layout_marginTop="10dp"
			android:layout_marginRight="8dp"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/cs_field_fth" />
	<EditText android:id="@+id/edt_faith"
			android:inputType="textCapWords"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_toRightOf="@id/txt_faith"
			android:layout_alignBaseline="@id/txt_faith" />
	
	<TextView android:id="@+id/txt_humanity"
			android:layout_below="@id/edt_name"
			android:layout_marginTop="10dp"
			android:layout_marginRight="8dp"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/cs_field_class" />
	<EditText android:id="@+id/edt_humanity"
			android:inputType="textCapWords"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_toRightOf="@id/txt_humanity"
			android:layout_alignBaseline="@id/txt_humanity" />
	
	
	<Button android:id="@+id/saveSheetButton"
			android:layout_alignParentBottom="true"
			android:layout_marginBottom="4dp"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
			android:layout_marginTop="8dp"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:gravity="center_horizontal"
			android:text="@string/app_btn_save_sheet" />
</RelativeLayout>